<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_title">Android for Dummies</string>
    <string name="app_name">AndroidforDummies</string>
    <string name="title">Tic-Tac-Toe</string>
    <string name="help_title">Help</string>
    <string name="help_text"><b>About Tic-Tac-Toe</b>\n
		Tic-Tac-Toe is a two-player game.\n
		Each player claims one of two symbols\n
		– “O” or “X” – and attempts to\n
		alternately place their symbol in empty\n
		locations in a 3-by-3 grid, so as\n
		to get three of the same symbol\n
		adjacent to each other in a straight\n
		line – either in a row or column, or\n
		across a diagonal.\n
		\n\n	</string>
    <string name="settings_label">Settings</string>
    <string name="login_title">Tic-Tac-Toe Awaits!</string>
    <string name="enter_username">Enter Username</string>
    <string name="permission_launch_activity"> This permission allows launching an activity in this application </string>
    <string name="exit">Exit</string>
    <string name="new_account">New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="clear">Clear</string>
    <string name="create">Create</string>
    <string name="start_audio">Start Audio</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="record_audio">Record Audio</string>
    <string name="options">Options</string>
    <string name="new_game">New Game</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="images">Images</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="where_am_i_">Where am I ...</string>
    <string name="sensors">Sensors</string>
    <string name="tic_tac_toe_on_wikipedia">Tic-Tac-Toe on Wikipedia</string>
    <string name="tic_tac_toe_on_wikipedia_in_web_view">Tic-Tac-Toe on Wikipedia in Web View</string>
    <string name="exit_help">Exit Help</string>
    <string name="show_image">Show Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_user">New User</string>
    <string name="login">Login</string>
    <string name="start_video">Start Video</string>
    <string name="stop_video">Stop Video</string>
    <string name="record_video">Record Video</string>
    <string name="find">Find</string>
    <string name="enter_address_">Enter address ...</string>
    <string name="locate_me">Locate Me</string>
    <string name="id">id</string>
    <string name="hello">hello</string>
    <string name="create_new_account">Create New Account</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="findme">Find me</string>

</resources>