<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textSize="15.5sp">
    <TextView  
    	android:text="@string/options"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_gravity="center"
	/>
    <ScrollView android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_gravity="center" 
				 android:layout_marginTop="15dip">
    <LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_gravity="center" >
	<Button
		android:id="@+id/buttonNewGame"
		android:text="@string/new_game"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/buttonAudio"
		android:text="@string/audio"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/buttonVideo"
		android:text="@string/video"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/buttonShowImage"
		android:text="@string/images"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/buttonSettings"
		android:text="@string/settings"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/buttonHelp"
		android:text="@string/help"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/buttonWhereAmI"
		android:text="@string/where_am_i_"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>		
	<Button
		android:id="@+id/buttonSensors"
		android:text="@string/sensors"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>	
	<Button
		android:id="@+id/buttonExit"
		android:text="@string/exit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>		

	</LinearLayout>
	</ScrollView>
</LinearLayout>
