<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:padding="30dip"
	android:orientation="vertical" >
	<Button
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:id="@+id/buttonAudioStart" 
	    android:text="@string/start_audio"/>
    <Button 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/stop_audio" 
        android:id="@+id/buttonAudioStop"/>
    <Button
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:id="@+id/buttonAudioRecord" 
	    android:text="@string/record_audio"/>
    <Button
		android:id="@+id/buttonAudioExit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/exit" />
</LinearLayout>