<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dip" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="175dip"
        android:layout_gravity="center"
        android:contentDescription="@string/images" />

    <Button
        android:id="@+id/buttonImageShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_image" />

    <Button
        android:id="@+id/buttonImageCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/buttonImageExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>