<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:padding="30dip"
	android:orientation="vertical" >
    <VideoView
    	android:id="@+id/videoView"
      	android:layout_height="175dip"
      	android:layout_width="match_parent"
      	android:layout_gravity="center" />
	<Button
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:id="@+id/buttonVideoStart" 
		android:text="@string/start_video"/>
	<Button
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/stop_video" 
		android:id="@+id/buttonVideoStop"/>
	<Button
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/record_video" 
		android:id="@+id/buttonVideoRecord"/>
	<Button
		android:id="@+id/buttonVideoExit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/exit" />
</LinearLayout>