<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:padding="10dip"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarDefaultDelayBeforeFade="2000" >

            <TextView
                android:id="@+id/help_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dip"
                android:paddingBottom="4dip"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:text="@string/help_text" />
        </ScrollView>

        <Button
            android:id="@+id/button_lookup_wikipedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tic_tac_toe_on_wikipedia" />

        <Button
            android:id="@+id/button_lookup_wikipedia_in_web_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tic_tac_toe_on_wikipedia_in_web_view" />

        <Button
            android:id="@+id/button_help_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_help" />
    </LinearLayout>

</ScrollView>