<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:apiKey="AIzaSyAUlkgL6UcrADywAU6aEQ_d0og7TlDmhKE"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_locate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_address_"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/button_findme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/findme" />
    </LinearLayout>

</LinearLayout>